// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`Page\` component should render correctly with \`className\` prop 1`] = `
<section
  className="page __CLASSNAME__"
>
  __CONTENT__
</section>
`;

exports[`\`Page\` component should render correctly with default props 1`] = `
<section
  className="page"
>
  __CONTENT__
</section>
`;
